changed mobile navbar menu toggle to svg, implemented the function for clicking outside the navbar modal. Fixed the content overflow in products component.

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ body {
   @apply duration-300 ease-in-out cursor-pointer;
 }
 
+section {
+  overflow: hidden;
+}
+
 /* customizing carousel control */
 button[data-testid="carousel-left-control"] span,
 button[data-testid="carousel-right-control"] span {
